--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@
     }
 
     body {
-        font-family: Arial, sans-serif;
+        font-family: 'Roboto', sans-serif;
         background: rgb(122, 189, 135);
         background: radial-gradient(circle, rgba(122, 189, 135, 1) 0%, rgba(202, 222, 200, 1) 44%, rgba(232, 251, 237, 1) 100%);
     }
@@ -133,8 +133,8 @@
         border: 2px solid whitesmoke;
         margin-right: 10px;
         background-color: #2c3e50;
-         color: #fff;
-         letter-spacing: 2px;
+        color: #fff;
+        letter-spacing: 2px;
         text-decoration: none;
         text-transform: uppercase;
         font-size: 1em;
@@ -183,3 +183,46 @@
       75% {margin-left: -300%; }
       100% {margin-left: -300%;}
   }
+    .divider {
+        height: 2px;
+        width: 80%;
+        background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.514), rgba(0, 0, 0, 0));
+        margin: 20px auto;
+    }
+        footer {
+            background: rgba(11, 37, 48, 0.363);
+            background: linear-gradient(90deg, rgba(11, 37, 48, 0.804) 0%, rgba(31, 95, 91, 0.751) 50%, rgba(73, 178, 101, 1) 100%);
+            color: #fff;
+            padding: 20px 0;
+            width: 100%;
+            box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            border-radius: 12px;
+            
+           }
+    
+           .footer-bottom {
+               display: flex;
+               justify-content: center;
+               align-items: center;
+               
+           }
+    
+           .containerfo{
+               display: flex;
+               justify-content: center;
+               align-items: center;
+               max-width: 1200px;
+               margin: 0 auto;
+               padding: 0 20px;
+               
+           }
+    
+           .footer-right {
+               text-align: center;
+           }
+    
+           .footer-copyrigth {
+               font-size: 0.9em;
+               color: #fff;
+           }
